feat: add currency types
